--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "rollup-plugin-uglify": "^1.0.1",
     "sinon": "^1.17.4",
     "ts-node": "^0.9.3",
-    "typescript": "^2.0.0-dev.20160705",
-    "typings": "^1.3.1"
+    "typescript": "^2.0.0-dev.20160705"
   }
 }
