--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,14 +4,20 @@
 		"pretty": true,
 
 		"allowJs": false,
+		"forceConsistentCasingInFileNames": true,
+		"noFallthroughCasesInSwitch": true,
 		"noImplicitAny": true,
 		"noImplicitReturns": true,
+		"noImplicitThis": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
 		"strictNullChecks": true,
 
 		"target": "es6",
+		"noEmitOnError": true,
 		"declaration": true,
 		"sourceMap": true,
-		"outDir": "dist/src.es2015"
+		"outDir": "dist/es6"
 	},
 	"files": [
 		"src/index.ts"
