--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "url": "https://github.com/Offirmo/hello-world-npm/issues"
   },
   "homepage": "https://github.com/Offirmo/hello-world-npm#readme",
-  "mainX": "dist/index.node-stable.js",
-  "main": "dist/es5/index.js",
+  "main": "dist/index.node-stable.js",
+  "mainX": "dist/es5/index.js",
   "jsnext:main": "dist/es6/index.js",
   "typings": "dist/es6/index.d.ts",
   "browser": "dist/prefixed_log.umd.js",
@@ -24,8 +24,7 @@
     "__prod": "~~~~~~~ PRODUCTION ~~~~~~~",
     "test": "test",
     "build": "node scripts/build.js",
-    "preversion": "npm run build",
-    "do_release": "np patch",
+    "np": "np",
     "__dev": "~~~~~~~ DEVELOPMENT ~~~~~~~",
     "dev1": "tsc --watch",
     "__misc": "~~~~~~~ MISC ~~~~~~~",
