--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "rollup-plugin-uglify": "^1.0.1",
     "sinon": "^1.17.4",
     "ts-node": "^1.0.0",
-    "typescript": "^2.1.0-dev.20160720"
+    "typescript": "^2.1.0-dev.20160720",
+    "vorpal": "^1.11.2"
   }
 }
