--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "lodash": "^4.13.1"
   },
   "devDependencies": {
-    "@types/lodash": "0.0.28",
+    "@types/lodash": "^0.0.28",
     "@types/node": "^4.0.30",
     "babel-preset-es2015-node-rollup": "^6.1.0",
     "babel-preset-es2015-rollup": "^1.1.1",
@@ -42,13 +42,14 @@
     "chai": "^3.5.0",
     "fs-extra": "^0.30.0",
     "mocha": "^2.5.3",
+    "node-typescript-compiler": "^0.0.2",
     "np": "^2.6.0",
     "rollup": "^0.34.1",
     "rollup-plugin-babel": "^2.4.0",
     "rollup-plugin-uglify": "^1.0.1",
     "sinon": "^1.17.4",
     "ts-node": "^1.0.0",
-    "typescript": "^2.1.0-dev.20160720",
+    "typescript": "^2.1.0-dev.20160721",
     "vorpal": "^1.11.2"
   }
 }
